overflow for profile menu fixed/added

--- a/frontend/src/components/AllSpots/AllSpots.css
+++ b/frontend/src/components/AllSpots/AllSpots.css
@@ -144,7 +144,16 @@ a {
 .form-input:focus {
     top: 6px;
     font-size: 12pt;
+}
 
+.form-input2:hover {
+    transition-duration: 200ms;
+    background-color: rgb(240, 240, 240);
+}
+
+.form-input2:focus {
+    top: 6px;
+    font-size: 12pt;
 }
 
 
@@ -178,7 +187,7 @@ a {
 .submit-button {
     border: none;
     height: 30px;
-    width: 380px;
+    width: 480px;
     border-radius: 13px;
     background-color: #d6005b;
     color: white;
